récupération du slide sans les modifs css

--- a/index.html
+++ b/index.html
@@ -324,74 +324,76 @@
         </div>
     </div>
    
-
-<!--  <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/32/9d/37329d91ad87c87cfba437ecbd285716.jpg">
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="http://nsa38.casimages.com/img/2016/09/10/160910021541511377.jpg">
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/9d/d8/c4/9dd8c43852738222ceca3f1913dd7198.jpg">
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="http://crawjacks.com/images/BJCoasters_13.jpg">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/03/56/09/0356092e05aac1389affae01159c76ea.jpg">
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/c3/a5/80/c3a580423bf5773e32c0152125913722.jpg">
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/fa/08/ac/fa08acbc58ff8b6d8d89871269dc92a6.jpg">
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
-                <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/02/ee/87/02ee8710a517caa32098ee35de74a522.jpg">
-            </div>
-        </div>
-    </div>  -->
-
-
-
  <!-- Half Page Image Background Carousel Header -->
 
 
+ 	<h3 id="surmesure"></h3>
     <div id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
+            <li data-target="#myCarousel" data-slide-to="6"></li>
+
         </ol>
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/atelier-boisde5.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2 class="titre-slide">Le sur-mesure</h2>
+                    	<p class="texte-slide">Venez découvrir notre nouveau service de personnalisation, pour une création qui vous ressemble.</p>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/rouleau_cuir059.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2 class="titre-slide">Choisissez vos matières</h2>
+                    	<p class="texte-slide">Laissez vous séduire par nos plus belles matières nobles.</p>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/leather-texture-snake.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2 class="titre-slide"></h2>
+                     	<p class="texte-slide"></p>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the fourth background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-assemblage.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <h2 class="titre-slide">Laissez votre empreinte</h2>
+                    	<p class="texte-slide">Un cadeau spécial ? Une attention particulière ? N'hésitez plus et demander la gravure de vos initiales.</p>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the fifth background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/leather-texture.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <h2 class="titre-slide">Informations</h2>
+                    	<p class="texte-slide">Notre service est disponible sur demande, n'hésitez pas à nous contacter.</p>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the sixth background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-texture-2.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <h2 class="titre-slide"></h2>
+                    	<p class="texte-slide">À bientôt dans notre boutique.</p>
                 </div>
             </div>
         </div>
@@ -403,7 +405,7 @@
             <span class="icon-next"></span>
         </a>
     </div>
-<!--https://s-media-cache-ak0.pinimg.com/564x/10/e0/cd/10e0cd826346e55dba10547834a0f4e0.jpg-->
+
 <footer>
    
 </footer>
