--- a/index.html
+++ b/index.html
@@ -406,20 +406,84 @@
         </a>
     </div>
 
-<footer>
-   
-</footer>
-    <!-- Put your page content here! -->
+<h3 id="contact"></h3>
+<!--footer-->
+<footer class="footer-distributed">
+
+			<div class="footer-left">
+
+				<!--<h3>Wildshoes<span></span></h3>-->
+				<img src="http://img1.imagilive.com/0916/logo829.png" alt="image du logo" />
+
+				<p class="footer-links">
+					<a href="#">Accueil</a>
+					·
+					<a href="#chaussepied">Chausse-Pieds</a>
+					·
+					<a href="#tirebotte">Tire-bottes</a>
+					·
+					<a href="#surmesure">Sur-Mesure</a>
+					·
+					<!--<a href="#">""</a>-->
+					<a href="#contact">Contact</a>
+				</p>
+
+				<p class="footer-company-name">Wildshoes &copy; 2015</p>
+			</div>
+
+			<div class="footer-center">
+
+				<div class="map-icons">
+					<!-- Trigger/Open The Modal -->
+					<i class="fa fa-map-marker" button id="myBtn"></i></button>
+
+					<!-- The Modal -->
+					<div id="myModal" class="modal">
+
+  					<!-- Modal content -->
+  					<div class="modal-content">
+  					<img src="http://img1.imagilive.com/0916/crop.png" alt="carte adresse wildshoes">
+  					<div class="map-link"><a href="http://www.openstreetmap.org/?mlat=47.89364&amp;mlon=1.89426#map=17/47.89364/1.89426&amp;layers=N">View Larger Map</a></div>
+					<span class="close">x</span>
+				 	</div>
+
+				</div>
+					<p><span>1 Avenue du Champ de Mars</span> 45000 Orléans</p>
+				</div>
+
+				<div>
+					<i class="fa fa-phone"></i>
+					<p>02 38 37 36 35</p>
+				</div>
+
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p><a href="mailto:support@cwildshoes.com">contact@wildshoes.com</a></p>
+				</div>
+
+			</div>
+
+			<div class="footer-right">
+
+				<p class="footer-company-about">
+					<span>À propos</span>
+					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+				</p>
+
+				<div class="footer-icons">
+
+					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
+				</div>
+			</div>
+		</footer> <!--fin du footer-->
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-
-
-
-
-
 
 </body>
 
