--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <!-- Custom CSS -->
     <link href="css/full.css" rel="stylesheet">
     <link href="css/half-slider.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
+    <link rel="stylesheet" href="css/demo.css">
+	<link rel="stylesheet" href="css/footer-basic-centered.css">
+	<!-- Custom Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
+
+
+<script src="https://use.fontawesome.com/4b73a13289.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
