récupération des ancres pour navbar et footer

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -49,16 +50,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Chausse-pieds</a>
+                        <a href="#chaussepied">Chausse-pieds</a>
                     </li>
                     <li>
-                        <a href="#">Tire-bottes</a>
+                        <a href="#tirebotte">Tire-bottes</a>
                     </li>
                     <li>
-                        <a href="#">Sur-mesure</a>
+                        <a href="#surmesure">Sur-mesure</a>
                     </li>
                     <li class="contact">
-                        <a class="contact" href="#">Contact</a>
+                        <a class="contact" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -79,6 +80,10 @@
             <p>Sed fruatur sane hoc solacio atque hanc insignem ignominiam, quoniam uni praeter se inusta sit, putet esse leviorem, dum modo, cuius exemplo se consolatur, eius exitum expectet, praesertim cum in Albucio nec audacia Gabini fuerit ac tamen hac una plaga conciderit, ignominia senatus. Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes, cum Apodemio agente in rebus milites ducens,  certus nec praemiis nec miseratione ulla posse deflecti.</p>  
         </div>
     </div>
+
+    <!-- h3 qui permet de faire une ancre pour navbar et footer -->
+    <h3 id="chaussepied"></h3>
+
     <div class="shoehorn">
         <div class="container-fluid">
             <div class="row-fluid">
@@ -206,6 +211,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- h3 qui permet de faire une ancre pour navbar et footer -->
+        <h3 id="tirebotte"></h3>
+
         <div class="bootjack">
             <div class="container-fluid">
                 <div class="row-fluid">
@@ -334,10 +343,10 @@
         </div>
     </div>
    
- <!-- Half Page Image Background Carousel Header -->
-
-
+    <!-- h3 qui permet de faire une ancre pour navbar et footer -->
  	<h3 id="surmesure"></h3>
+
+ 	 <!-- Carousel -->
     <div id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -414,17 +423,14 @@
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
             <span class="icon-next"></span>
         </a>
-    </div>
+    </div> <!-- fin du carousel -->
 
+<!-- h3 qui permet de créer une ancre pour navbar et footer -->
 <h3 id="contact"></h3>
 <!--footer-->
 <footer class="footer-distributed">
-
 			<div class="footer-left">
-
-				<!--<h3>Wildshoes<span></span></h3>-->
 				<img src="http://img1.imagilive.com/0916/logo829.png" alt="image du logo" />
-
 				<p class="footer-links">
 					<a href="#">Accueil</a>
 					·
@@ -437,49 +443,37 @@
 					<!--<a href="#">""</a>-->
 					<a href="#contact">Contact</a>
 				</p>
-
 				<p class="footer-company-name">Wildshoes &copy; 2015</p>
 			</div>
-
 			<div class="footer-center">
-
 				<div class="map-icons">
 					<!-- Trigger/Open The Modal -->
 					<i class="fa fa-map-marker" button id="myBtn"></i></button>
-
 					<!-- The Modal -->
 					<div id="myModal" class="modal">
-
   					<!-- Modal content -->
   					<div class="modal-content">
   					<img src="http://img1.imagilive.com/0916/crop.png" alt="carte adresse wildshoes">
   					<div class="map-link"><a href="http://www.openstreetmap.org/?mlat=47.89364&amp;mlon=1.89426#map=17/47.89364/1.89426&amp;layers=N">View Larger Map</a></div>
 					<span class="close">x</span>
 				 	</div>
-
 				</div>
 					<p><span>1 Avenue du Champ de Mars</span> 45000 Orléans</p>
 				</div>
-
 				<div>
 					<i class="fa fa-phone"></i>
 					<p>02 38 37 36 35</p>
 				</div>
-
 				<div>
 					<i class="fa fa-envelope"></i>
 					<p><a href="mailto:support@cwildshoes.com">contact@wildshoes.com</a></p>
 				</div>
-
 			</div>
-
 			<div class="footer-right">
-
 				<p class="footer-company-about">
 					<span>À propos</span>
 					Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
 				</p>
-
 				<div class="footer-icons">
 
 					<a href="#"><i class="fa fa-facebook"></i></a>
