récupération et modifs de l'index et full

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Custom Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Great+Vibes|Ovo|Playfair+Display+SC|Rufina" rel="stylesheet">
 
 
 <script src="https://use.fontawesome.com/4b73a13289.js"></script>
@@ -71,7 +71,7 @@
         <div class="presentation">
             <h1>WildShoes</h1>
             <h2>Orléans</h2>
-            <p>Artisant</br>de luxe depuis 1927</p>
+            <p>Artisan</br>de luxe depuis 1927</p>
         </div>
     </div>
     <div class="full">
