ajout photo Julien

--- a/index.html
+++ b/index.html
@@ -443,8 +443,12 @@
 					<!--<a href="#">""</a>-->
 					<a href="#contact">Contact</a>
 				</p>
-				<p class="footer-company-name">Wildshoes &copy; 2015</p>
+				<p class="footer-company-name">Wildshoes &copy; 2015</p><br/>
+				<div class="roundedImage">
+						<img src="http://img1.imagilive.com/0916/julien-version-3095.png" alt="le père fondateur">
+					</div>
 			</div>
+
 			<div class="footer-center">
 				<div class="map-icons">
 					<!-- Trigger/Open The Modal -->
@@ -481,6 +485,7 @@
 					<a href="#"><i class="fa fa-linkedin"></i></a>
 					<a href="#"><i class="fa fa-github"></i></a>
 				</div>
+					
 			</div>
 		</footer> <!--fin du footer-->
 
