modifs de dernière minute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>  
+<html lang="fr">  
 <!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 <head>
     <meta charset="utf-8">
@@ -35,14 +35,14 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Accueil</span>
-                    <span class="icon-bar">Chausse-pieds</span>
-                    <span class="icon-bar">Tire-bottes</span>
-                    <span class="icon-bar">Sur-mesure</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Accueil</a>
             </div>
@@ -67,6 +67,8 @@
         </div>         
         <!-- /.container -->
     </nav>
+
+  <header class="logo">
     <div class="header">
         <div class="presentation">
             <h1>WildShoes</h1>
@@ -75,11 +77,16 @@
         </div>
     </div>
     <div class="full">
-        <div class="title_header">
-            <h1>Notre histoire</h1>
-            <p>Sed fruatur sane hoc solacio atque hanc insignem ignominiam, quoniam uni praeter se inusta sit, putet esse leviorem, dum modo, cuius exemplo se consolatur, eius exitum expectet, praesertim cum in Albucio nec audacia Gabini fuerit ac tamen hac una plaga conciderit, ignominia senatus. Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes, cum Apodemio agente in rebus milites ducens,  certus nec praemiis nec miseratione ulla posse deflecti.</p>  
+    	<div class="container">
+    		<div class="row">
+        		<div class="title_header">
+            		<h1 class="text-center">Notre histoire</h1>
+            		<p class="text-center">Sed fruatur sane hoc solacio atque hanc insignem ignominiam, quoniam uni praeter se inusta sit, putet esse leviorem, dum modo, cuius exemplo se consolatur, eius exitum expectet, praesertim cum in Albucio nec audacia Gabini fuerit ac tamen hac una plaga conciderit, ignominia senatus. Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes, cum Apodemio agente in rebus milites ducens,  certus nec praemiis nec miseratione ulla posse deflecti.</p>  
+        		</div>
+        	</div>
         </div>
     </div>
+   </header>
 
     <!-- h3 qui permet de faire une ancre pour navbar et footer -->
     <h3 id="chaussepied"></h3>
@@ -408,7 +415,7 @@
             </div>
             <div class="item">
                 <!-- Set the sixth background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-texture-2.jpg');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-bamboo.jpg');">
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide"></h2>
