--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- /.container -->
     </nav>
 
-  <header class="logo">
+  <!-- <header class="logo">
     <div class="header">
         <div class="presentation">
             <h1>WildShoes</h1>
@@ -86,7 +86,21 @@
         	</div>
         </div>
     </div>
-   </header>
+   </header>-->
+
+      <header class="logo">
+        <div class="presentation">
+            <h1>WildShoes</h1>
+            <h2>Orléans</h2>
+            <p>Artisant</br>de luxe depuis 1927</p>
+        </div>
+        <div class="full">
+            <div class="title_header">
+                <h1>Notre histoire</h1>
+                <p>Sed fruatur sane hoc solacio atque hanc insignem ignominiam, quoniam uni praeter se inusta sit, putet esse leviorem, dum modo, cuius exemplo se consolatur, eius exitum expectet, praesertim cum in Albucio nec Pisonis libidines nec audacia Gabini fuerit ac tamen hac una plaga conciderit, ignominia senatus. Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, itineribus interiectis permutatione iumentorum emensis venit Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes, qui sub eo domesticis praefuit, cum Apodemio agente in rebus milites ducens, quos beneficiis suis oppigneratos elegerat imperator certus nec praemiis nec miseratione ulla posse deflecti.</p>
+            </div>
+        </div>
+    </header>
 
     <!-- h3 qui permet de faire une ancre pour navbar et footer -->
     <h3 id="chaussepied"></h3>
@@ -374,7 +388,7 @@
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide">Le sur-mesure</h2>
-                    	<p class="texte-slide">Venez découvrir notre nouveau service de personnalisation, pour une création qui vous ressemble.</p>
+                    	<p class="texte-slide">Découvrez notre nouveau service de personnalisation, pour une création qui vous ressemble.</p>
                 </div>
             </div>
             <div class="item">
